Don't pass --add-opens= to javac
Backported from https://github.com/bazelbuild/bazel/commit/367994ab9f3bb8d06a39d6bd0c139f00dcf47f3e

Fixes https://github.com/bazelbuild/bazel/issues/20468